
*** HYBRID CHANGELOG
*** Newest entries at top
	
version hybrid-6-b44    31-Jan-1999
* (s_bsd.c) fixed a botch with rr = 0 causing bizarre behaviour under solaris
  (ping time outs etc.) due to a mis-cut and paste from the select code
* (s_bsd.c) redid read_packet() to use msg_ready again
* (s_bsd.c) removed unnecessary default_read_set default_write_set, that was a
  remnant from a failed experiment with pre-set up fd set's, it was
  just slowing down the code for no reason.
* (s_misc.c) redid get_client_name() slightly to be consistent,
  idented names should not have ~ non-idented names should have ~
  lets not be inconsitent with (+) prefixes for idented names
-Dianora
* changed example.conf to remind people to have their virtual address in
  the M: line for outbound connects
* fixed the STATS_NOTICE invalid directive.  made it #define by default.
-FlashMan
* channel has to be +ip to show invite notices "p is for paranoid
  and thats good enough for me" too many complaints. I think this
  is a reasonable way of doing it for now.
* s_bsd.c moved some code around in in connect_inet() to remove
  a redundant if(specific_virtual_host). Also moved the error check
  on socket open logically where it should be.
* fixed the USE_FAST_FD_ISSET botch I introduced, corrected an unforseen
  error thats been there for a while.
* added a little more useful information in the bug report in blalloc.c
  I added a report of what size of block is being freed.
* I added a horrible kludge to ircd.c/struct.h to bit mark clients
  that have already been exited. It appears that somehow, the same
  client is being examined twice and exited twice =occasionally=
  Because of the block allocator, its safe to check the bit after free
  *kludge* I really didn't want to admit I coded that.
* Don't allow non local opers to see spoofed I lines. 
-Dianora
	
version hybrid-6-b43    24-Jan-1999
* reworked io_loop dropping CPU load significantly, this is still something 